<resources>
    <string name="app_name">MyKalkulator</string>

    //btn
    <string name="btnZero">0</string>
    <string name="btnOne">1</string>
    <string name="btnTwo">2</string>
    <string name="btnThree">3</string>
    <string name="btnFour">4</string>
    <string name="btnFive">5</string>
    <string name="btnSix">6</string>
    <string name="btnSeven">7</string>
    <string name="btnEight">8</string>
    <string name="btnNine">9</string>
    <string name="btnPlus">+</string>
    <string name="btnMin">-</string>
    <string name="btnMultiply">*</string>
    <string name="btnDivide">/</string>
    <string name="btnEqual">=</string>
    <string name="btnDot">.</string>
    <string name="btnPlusMin">+/-</string>
    <string name="btnClear">C</string>
    <string name="btnPercent">%</string>
    <string name="btnKurung">()</string>
    <string name="btnDelete">Delete</string>
    <string name="btnHistory">History</string>


    //tv
    <string name="tvResult">Result</string>
    <string name="tvShow">1x2</string>


</resources>