<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!--    btn-->
<!--     +/-, 0, ., =-->
    <Button
        android:id="@+id/btnPlusMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onPlusMin"
        android:text="@string/btnPlusMin"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnZero"/>
    <Button
        android:id="@+id/btnZero"
        style="@style/btnNumber"
        android:text="@string/btnZero"
        android:onClick="onDigit"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnPlusMin"
        app:layout_constraintEnd_toStartOf="@id/btnDot"/>
    <Button
        android:id="@+id/btnDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDot"
        android:onClick="onDot"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnZero"
        app:layout_constraintEnd_toStartOf="@id/btnEquals"/>
    <Button
        android:id="@+id/btnEquals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEqual"
        android:onClick="onEqual"
        android:backgroundTint="@color/black"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnDot"
        app:layout_constraintEnd_toEndOf="parent"/>

<!--    1,2,3,+-->
    <Button
        android:id="@+id/btnOne"
        style="@style/btnNumber"
        android:text="@string/btnOne"
        android:onClick="onDigit"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toTopOf="@id/btnPlusMin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnTwo"/>
    <Button
        android:id="@+id/btnTwo"
        style="@style/btnNumber"
        android:text="@string/btnTwo"
        android:onClick="onDigit"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toTopOf="@id/btnZero"
        app:layout_constraintStart_toEndOf="@id/btnOne"
        app:layout_constraintEnd_toStartOf="@id/btnThree"/>
    <Button
        android:id="@+id/btnThree"
        style="@style/btnNumber"
        android:text="@string/btnThree"
        android:onClick="onDigit"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toTopOf="@id/btnDot"
        app:layout_constraintStart_toEndOf="@id/btnTwo"
        app:layout_constraintEnd_toStartOf="@id/btnPlus"/>
    <Button
        android:id="@+id/btnPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPlus"
        android:onClick="onPlus"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toTopOf="@id/btnEquals"
        app:layout_constraintStart_toEndOf="@id/btnThree"
        app:layout_constraintEnd_toEndOf="parent"/>

<!--    4,5,6,- -->
    <Button
        android:id="@+id/btnFour"
        style="@style/btnNumber"
        android:text="@string/btnFour"
        android:onClick="onDigit"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toTopOf="@id/btnOne"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnFive"/>
    <Button
        android:id="@+id/btnFive"
        style="@style/btnNumber"
        android:text="@string/btnFive"
        android:onClick="onDigit"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toTopOf="@id/btnTwo"
        app:layout_constraintStart_toEndOf="@id/btnFour"
        app:layout_constraintEnd_toStartOf="@id/btnSix"/>
    <Button
        android:id="@+id/btnSix"
        style="@style/btnNumber"
        android:text="@string/btnSix"
        android:onClick="onDigit"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toTopOf="@id/btnThree"
        app:layout_constraintStart_toEndOf="@id/btnFive"
        app:layout_constraintEnd_toStartOf="@id/btnMin"/>
    <Button
        android:id="@+id/btnMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnMin"
        android:onClick="onMin"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toTopOf="@id/btnPlus"
        app:layout_constraintStart_toEndOf="@id/btnSix"
        app:layout_constraintEnd_toEndOf="parent"/>

<!--    7, 8,9 ,*-->
    <Button
        android:id="@+id/btnSeven"
        style="@style/btnNumber"
        android:text="@string/btnSeven"
        android:onClick="onDigit"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toTopOf="@id/btnFour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnEight"/>
    <Button
        android:id="@+id/btnEight"
        style="@style/btnNumber"
        android:text="@string/btnEight"
        android:onClick="onDigit"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toTopOf="@id/btnFive"
        app:layout_constraintStart_toEndOf="@id/btnSeven"
        app:layout_constraintEnd_toStartOf="@id/btnNine"/>
    <Button
        android:id="@+id/btnNine"
        style="@style/btnNumber"
        android:text="@string/btnNine"
        android:onClick="onDigit"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toTopOf="@id/btnSix"
        app:layout_constraintStart_toEndOf="@id/btnEight"
        app:layout_constraintEnd_toStartOf="@id/btnMultiply"/>
    <Button
        android:id="@+id/btnMultiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnMultiply"
        android:onClick="onMultiply"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toTopOf="@id/btnMin"
        app:layout_constraintStart_toEndOf="@id/btnNine"
        app:layout_constraintEnd_toEndOf="parent"/>

<!--    c, (), %, /-->
    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnClear"
        android:onClick="onClear"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toTopOf="@id/btnSeven"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnEight"/>
    <Button
        android:id="@+id/btnKurung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnKurung"
        android:onClick="onKurung"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toTopOf="@id/btnEight"
        app:layout_constraintStart_toEndOf="@id/btnClear"
        app:layout_constraintEnd_toStartOf="@id/btnNine"/>
    <Button
        android:id="@+id/btnPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnPercent"
        android:onClick="onPercent"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toTopOf="@id/btnNine"
        app:layout_constraintStart_toEndOf="@id/btnKurung"
        app:layout_constraintEnd_toStartOf="@id/btnDivide"/>

    <Button
        android:id="@+id/btnDivide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDivide"
        android:onClick="onDivide"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toTopOf="@id/btnMultiply"
        app:layout_constraintStart_toEndOf="@id/btnPercent"
        app:layout_constraintEnd_toEndOf="parent"/>

<!--    del,History-->

    <Button
        android:id="@+id/btnHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginBottom="4dp"
        android:text="@string/btnHistory"
        android:onClick="onHistory"
        app:layout_constraintBottom_toTopOf="@id/btnClear"
        app:layout_constraintStart_toStartOf="@id/btnClear" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDelete"
        android:onClick="onDelete"
        android:layout_marginVertical="5dp"
        app:layout_constraintBottom_toTopOf="@id/btnDivide"
        app:layout_constraintEnd_toEndOf="@id/btnDivide"/>

<!--    tv-->
    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:gravity="right"
        android:layout_marginHorizontal="16dp"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnDelete"/>

    <TextView
        android:id="@+id/tvShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvShow"
        android:gravity="right"
        android:layout_marginHorizontal="16dp"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvResult"/>





</androidx.constraintlayout.widget.ConstraintLayout>